[PRIMA-12048]: [Pyxis Scss] Ridefinizione delle variabili delle foundations (#15)

--- a/packages/pyxis-scss/.stylelintrc
+++ b/packages/pyxis-scss/.stylelintrc
@@ -65,7 +65,7 @@
     "shorthand-property-no-redundant-values": true,
     "string-quotes": "double",
     "unit-case": "lower",
-    "unit-no-unknown": true,
+    "unit-no-unknown": null,
     "value-no-vendor-prefix": null
   }
 }
