[PRIMA-11996]: [Pyxis] Implementazione dei design token (#20)

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "install": "lerna bootstrap",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
+    "prettify:token": "lerna run prettify:token --stream",
     "review:elm": "lerna run review --scope=pyxis-elm",
     "review:elm:fix": "lerna run review:fix --scope=pyxis-elm",
     "sassdocs:build": "lerna run sassdocs:build --stream",
     "storybook:build": "lerna run storybook:build --stream",
     "storybook:serve": "lerna run storybook:serve --stream",
-    "test": "lerna run test --scope=pyxis-elm"
+    "test": "lerna run test --scope=pyxis-elm",
+    "tokens:build": "lerna run tokens:build --stream && yarn prettify:token"
   }
 }
