--- a/packages/pyxis-react/package.json
+++ b/packages/pyxis-react/package.json
@@ -8,6 +8,7 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@pyxis/icons": "^0.0.1",
+    "@pyxis/tokens": "0.0.1",
     "@rollup/plugin-alias": "^3.1.8",
     "@storybook/addon-docs": "^6.4.7",
     "@storybook/addon-storyshots": "^6.4.7",
