[PRIMA-12213]: [Pyxis Scss] Implementare la Label (#26)

--- a/packages/pyxis-scss/sassdoc.config.json
+++ b/packages/pyxis-scss/sassdoc.config.json
@@ -15,6 +15,7 @@
         "ATOMS": "Atoms",
         "BREAKPOINTS": "Breakpoints",
         "COLORS": "Colors",
+        "COMPONENTS": "Components",
         "CONFIGURATION": "Configuration",
         "CONTAINERS": "Containers",
         "ELEVATION": "Elevation",
