--- a/packages/pyxis-react/package.json
+++ b/packages/pyxis-react/package.json
@@ -44,6 +44,7 @@
     "storybook:serve": "start-storybook -p 6006 -s public",
     "storybook:test": "STORYBOOK_ENV=TEST start-storybook -p 6006 -s public",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --watchAll=false --coverage",
     "watch": "yarn build:esm --watch & yarn build:cjs --watch"
   },
   "eslintConfig": {
@@ -74,6 +75,13 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/components/**/*.{ts,tsx}",
+      "!**/node_modules/**",
+      "!**/*.stories.{ts,tsx}"
+    ]
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.5",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -82,9 +90,12 @@
     "@storybook/addon-a11y": "^6.4.7",
     "@storybook/addon-actions": "^6.4.7",
     "@storybook/addon-essentials": "^6.4.7",
+    "@storybook/addon-jest": "^6.4.9",
     "@storybook/addon-links": "^6.4.7",
+    "@storybook/addons": "^6.4.9",
     "@storybook/node-logger": "^6.4.7",
     "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/theming": "^6.4.9",
     "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -96,6 +107,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest-config": "^27.4.5",
     "rollup": "^2.60.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
