Elm-book should provide files inside a dist folder

--- a/packages/pyxis-elm/package.json
+++ b/packages/pyxis-elm/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/primait/pyxis-react#readme",
   "main": "lib/pyxis-elm.js",
   "scripts": {
-    "elmbook:serve": "cp ../pyxis-scss/dist/pyxis.css ./pyxis.css && elm-book src/Stories/Book.elm",
+    "elmbook:serve": "cp ../pyxis-scss/dist/pyxis.css ./dist/pyxis.css && elm-book src/Stories/Book.elm --dir=./dist -- --output=dist/index.html",
     "generate:icons": "ts-node --project scripts/tsconfig.json ./scripts/generateIcons.ts && ./node_modules/.bin/elm-format src/Components/IconSet.elm --yes",
     "review": "./node_modules/.bin/elm-review src",
     "review:fix": "./node_modules/.bin/elm-review src --fix",
