--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "scripts": {
     "build": "lerna run build --stream",
+    "elmbook:build": "lerna run elmbook:build --scope=pyxis-elm",
     "elmbook:serve": "lerna run elmbook:serve --scope=pyxis-elm",
     "generate:icons": "lerna run generate:icons --scope=pyxis-elm",
     "install": "lerna bootstrap",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
+    "preelmbook:serve": "lerna run build --stream",
     "prettify:token": "lerna run prettify:token --stream",
     "review:elm": "lerna run review --scope=pyxis-elm",
     "review:elm:fix": "lerna run review:fix --scope=pyxis-elm",
