--- a/packages/pyxis-elm/package.json
+++ b/packages/pyxis-elm/package.json
@@ -8,8 +8,11 @@
   "homepage": "https://github.com/primait/pyxis-react#readme",
   "main": "lib/pyxis-elm.js",
   "scripts": {
-    "elmbook:serve": "cp ../pyxis-scss/dist/pyxis.css ./dist/pyxis.css && elm-book src/Stories/Book.elm --dir=./dist -- --output=dist/index.html",
+    "elmbook:build": "elm make src/Stories/Book.elm --output=dist/index.html",
+    "elmbook:serve": "elm-book src/Stories/Book.elm --dir=./dist -- --output=dist/index.html",
     "generate:icons": "ts-node --project scripts/tsconfig.json ./scripts/generateIcons.ts && ./node_modules/.bin/elm-format src/Components/IconSet.elm --yes",
+    "preelmbook:build": "yarn preelmbook:serve",
+    "preelmbook:serve": "mkdir -p dist && elm make && cp ../pyxis-scss/dist/pyxis.css ./dist/pyxis.css",
     "review": "./node_modules/.bin/elm-review src",
     "review:fix": "./node_modules/.bin/elm-review src --fix",
     "test": "./node_modules/.bin/elm-test"
