--- a/packages/pyxis-react/package.json
+++ b/packages/pyxis-react/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
+    "html-entities": "^2.3.2",
     "postcss": "^8.4.4",
     "puppeteer": "^10.4.0",
     "react": "^17.0.2",
