[PRIMA-12282]: [Pyxis Scss] Add common transition (#53)

--- a/packages/pyxis-scss/sassdoc.config.json
+++ b/packages/pyxis-scss/sassdoc.config.json
@@ -21,6 +21,7 @@
         "ELEVATION": "Elevation",
         "HIDING": "Hiding",
         "LIB": "Core functions",
+        "MOTION": "Motion",
         "RADIUS": "Radius",
         "SPACINGS": "Spacings",
         "TYPOGRAPHY": "Typography",
