completed form step 1

--- a/packages/pyxis-elm/package.json
+++ b/packages/pyxis-elm/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-elm": "^2.2.1",
+    "@parcel/transformer-sass": "^2.2.1",
     "parcel": "^2.2.1"
   }
 }
