--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "lerna run build --stream",
     "elmbook:build": "lerna run elmbook:build --scope=pyxis-elm",
     "elmbook:serve": "lerna run elmbook:serve --scope=pyxis-elm",
-    "generate:icons": "lerna run generate:icons --scope=pyxis-elm",
+    "generate:icons": "lerna run generate:icons --stream",
     "install": "lerna bootstrap",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
