--- a/packages/pyxis-elm/package.json
+++ b/packages/pyxis-elm/package.json
@@ -9,7 +9,7 @@
   "main": "lib/pyxis-elm.js",
   "scripts": {
     "elmbook:build": "elm make src/Stories/Book.elm --output=dist/index.html",
-    "elmbook:serve": "elm-book src/Stories/Book.elm --dir=./dist -- --output=dist/index.html",
+    "elmbook:serve": "elm-book src/Stories/Book.elm --dir=./dist -- --output=dist/index.html --debug",
     "generate:icons": "ts-node --project scripts/tsconfig.json ./scripts/generateIcons.ts && ./node_modules/.bin/elm-format src/Components/IconSet.elm --yes",
     "preelmbook:build": "yarn preelmbook:serve",
     "preelmbook:serve": "mkdir -p dist && elm make && cp ../pyxis-scss/dist/pyxis.css ./dist/pyxis.css && cp -r ./assets ./dist/assets",
