--- a/packages/pyxis-react/package.json
+++ b/packages/pyxis-react/package.json
@@ -41,6 +41,7 @@
     "lint:fix": "eslint src/**/*.tsx --fix",
     "start": "react-scripts start",
     "prestorybook": "yarn lint:fix",
+    "component:generate": "generate-react component",
     "storybook:build": "build-storybook -s public",
     "storybook:serve": "start-storybook -p 6006 -s public",
     "storybook:test": "STORYBOOK_ENV=TEST start-storybook -p 6006 -s public",
@@ -108,6 +109,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "generate-react-cli": "^7.0.6",
     "jest-config": "^27.4.5",
     "rollup": "^2.60.1",
     "rollup-plugin-dts": "^4.0.1",
