--- a/packages/pyxis-elm/package.json
+++ b/packages/pyxis-elm/package.json
@@ -8,22 +8,26 @@
   "homepage": "https://github.com/primait/pyxis-react#readme",
   "main": "lib/pyxis-elm.js",
   "scripts": {
-    "build" : "yarn example:build",
-    "example:build" : "./node_modules/.bin/elm make src/Examples/Form/Main.elm",
-    "example:serve" : "./node_modules/.bin/elm reactor",
-    "preexample:serve" : "yarn reset-dist",
+    "build": "yarn example:build && yarn docs:build",
+    "docs:build": "elm make --output=/dev/null --docs=docs.json",
+    "example:build": "elm make src/Examples/Form/Main.elm",
+    "example:serve": "elm reactor",
+    "preexample:serve": "yarn reset-dist",
     "elmbook:build": "elm make src/Stories/Book.elm --output=dist/index.html",
     "elmbook:serve": "elm-book src/Stories/Book.elm --dir=./dist -- --output=dist/index.html --debug",
-    "generate:icons": "ts-node --project scripts/tsconfig.json ./scripts/generateIcons.ts && ./node_modules/.bin/elm-format src/Components/IconSet.elm --yes",
+    "generate:icons": "ts-node --project scripts/tsconfig.json ./scripts/generateIcons.ts && elm-format src/Components/IconSet.elm --yes",
     "preelmbook:build": "yarn reset-dist",
     "preelmbook:serve": "yarn reset-dist",
     "reset-dist": "mkdir -p dist && elm make && cp ../pyxis-scss/dist/pyxis.css ./dist/pyxis.css && cp -r ./assets ./dist/assets",
-    "review": "./node_modules/.bin/elm-review src",
-    "review:fix": "./node_modules/.bin/elm-review src --fix",
-    "test": "./node_modules/.bin/elm-test"
+    "review": "elm-review src",
+    "review:fix": "elm-review src --fix",
+    "prereview":"elm-analyse",
+    "prereview:fix":"elm-analyse",
+    "test": "elm-test"
   },
   "dependencies": {
     "elm": "^0.19.1-5",
+    "elm-analyse": "^0.16.5",
     "elm-book": "^1.0.1",
     "elm-format": "^0.8.5",
     "elm-review": "^2.7.0",
