--- a/packages/pyxis-scss/.stylelintrc
+++ b/packages/pyxis-scss/.stylelintrc
@@ -54,7 +54,7 @@
     "selector-max-specificity": [
       "0,3,1",
       {
-        "ignoreSelectors": [":before", ":after", ":hover", ":checked", ":first-child", ":nth-child", ":not"]
+        "ignoreSelectors": [":before", ":after", ":hover", ":focus", ":focus-within", ":checked", ":first-child", ":nth-child", ":not"]
       }
     ],
     "selector-max-type": 2,
