--- a/packages/pyxis-scss/package.json
+++ b/packages/pyxis-scss/package.json
@@ -28,6 +28,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "postcss-selector-not": "^5.0.0",
     "postcss-sort-media-queries": "^4.1.0",
     "prettier": "^2.5.1",
     "sass": "^1.42.1",
