--- a/packages/pyxis-scss/package.json
+++ b/packages/pyxis-scss/package.json
@@ -26,6 +26,7 @@
     "mini-css-extract-plugin": "^2.4.2",
     "postcss": "^8.3.9",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-gap": "^1.0.0",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-selector-not": "^5.0.0",
