--- a/packages/pyxis-scss/package.json
+++ b/packages/pyxis-scss/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pyxis/scss",
+  "name": "@primauk/scss",
   "version": "0.0.9",
   "description": "Pyxis is the Prima Assicurazioni's design system.",
   "main": "src/scss/pyxis.scss",
