change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyxis",
+  "name": "@primauk/pyxis",
   "version": "0.0.1",
   "repository": "git@github.com:primait/pyxis-react.git",
   "author": "Prima Assicurazioni",
