--- a/packages/pyxis-tokens/package.json
+++ b/packages/pyxis-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@primauk/tokens",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "license": "MIT",
   "scripts": {
     "tokens:build": "ts-node --project ./scripts/tsconfig.json ./scripts/generateTokens.ts"
