--- a/packages/pyxis-scss/package.json
+++ b/packages/pyxis-scss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@primauk/scss",
-  "version": "0.0.9",
+  "version": "0.0.10-alpha.0",
   "description": "Pyxis is the Prima Assicurazioni's design system.",
   "main": "src/scss/pyxis.scss",
   "repository": "git@github.com:primait/pyxis-scss.git",
